feat: implement service shutdown event handling and enhance socket management