@@ -20,8 +20,16 @@ import java.util.jar.JarInputStream;
 @UtilityClass
 public final class ServiceLaunchFactory {
     private final List<String> ARGUMENTS = List.of(
-            "-Xms128M", "-XX:-UseAdaptiveSizePolicy",
-            "-XX:MaxRAMPercentage=95.0", "-Dterminal.jline=false"
+            "-XX:+UseG1GC", "-Daikars.new.flags=true",
+            "-XX:+ParallelRefProcEnabled", "-XX:MaxGCPauseMillis=200",
+            "-XX:+UnlockExperimentalVMOptions", "-XX:+DisableExplicitGC",
+            "-XX:+AlwaysPreTouch", "-XX:G1NewSizePercent=30",
+            "-XX:G1MaxNewSizePercent=40", "-XX:G1HeapRegionSize=8M",
+            "-XX:G1ReservePercent=20", "-XX:G1HeapWastePercent=5",
+            "-XX:G1MixedGCCountTarget=4", "-XX:InitiatingHeapOccupancyPercent=15",
+            "-XX:G1MixedGCLiveThresholdPercent=90", "-XX:G1RSetUpdatingPauseTimePercent=5",
+            "-XX:SurvivorRatio=32", "-XX:+PerfDisableSharedMem",
+            "-XX:MaxTenuringThreshold=1", "-Dusing.aikars.flags=https://mcflags.emc.gs"
     );
 
     @SneakyThrows
@@ -39,8 +47,12 @@ public final class ServiceLaunchFactory {
 
         List<String> arguments = new ArrayList<>();
         arguments.add("java");
+        arguments.add("--enable-native-access=ALL-UNNAMED");
+        arguments.add("-Xms" + service.group().property(GroupProperties.MEMORY()) + "M");
         arguments.add("-Xmx" + service.group().property(GroupProperties.MEMORY()) + "M");
         arguments.addAll(ARGUMENTS);
+
+        arguments.add("-Dfile.encoding=UTF-8");
         arguments.add("-Dlogback.statusListenerClass=ch.qos.logback.core.status.NopStatusListener");
         arguments.add("-Dcom.mojang.eula.agree=true");
         arguments.add("-cp");
